Fix scrollbar showing because of tooltip

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -2,6 +2,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #042f3e;
+  overflow: hidden;
 }
 
 main {
